--- a/recipes/strawberry-margarita.html
+++ b/recipes/strawberry-margarita.html
@@ -1,1 +1,21 @@
 <h1>Frozen Strawberry Margarita</h1>
+<img src="../joanna-kosinska-m741tj4Cz7M-unsplash.jpg" alt="frozen strawberry margarita garnished with basil leaves">
+//Under the image, it should have an appropriately sized “Description” heading followed by a paragraph or two describing the recipe.
+Under the description, add an “Ingredients” heading followed by an unordered list of the ingredients needed for the recipe.
+Finally, under the ingredients list, add a “Steps” heading followed by an ordered list of the steps needed for making the dish.
+<h2>5 Ingredient Summer Cocktail Guaranteed to Impress Your Friends</h2>
+<p>On a hot summer's day, there are few things more refreshing than a cool frozen strawberry margarita. Whether enjoyed poolside, with chips and salsa, or simply on your front porch, this strawberry margarita is sure to knock your socks off with its tasty flavors. All you need is five minutes, a few ingredients, and a trusty blender for these top-rated strawberry margaritas.</p>
+<h2>What You'll Need</h2>
+<ul>
+    <li>2 cups ice</li>
+    <li>6 fl oz tequila</li>
+    <li>2 fl oz triple Sec</li>
+    <li>8 oz frozen Strawberries</li>
+    <li>4 fl oz limeade Concentrate</li>
+</ul>
+<h2>How to Throw It Together</h2>
+<ol>
+    <li>Fill a blender with ice cubes; pulse until ice is crushed.</li>
+    <li>Pour in tequila and triple sec, then add strawberries and limeade concentrate. Blend until smooth, about 30 seconds.</li>
+    <li>Pour into four margarita glasses and serve immediately.</li>
+</ol>
